forcedotcom/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChatterAPIHeader__c</fullName>
        <formula>GETSESSIONID()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter API Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBayCompleteSaleRequest__c</fullName>
        <formula>&quot;&lt;?xml version=\&quot;1.0\&quot; encoding=\&quot;utf-8\&quot;?&gt;&quot; +
&quot;&lt;CompleteSaleRequest xmlns=\&quot;urn:ebay:apis:eBLBaseComponents\&quot;&gt;&quot; + 
&quot;&lt;ItemID&gt;&quot; + eBayItemNumber__c + &quot;&lt;/ItemID&gt;&quot; + 
&quot;&lt;Shipped&gt;&quot; +  IF(Dispatched__c, &apos;true&apos;, &apos;false&apos;) + &quot;&lt;/Shipped&gt;&quot; + 
&quot;&lt;RequesterCredentials&gt;&quot; + 
&quot;&lt;eBayAuthToken&gt;&quot; + $Setup.eBayAPI__c.UserTokenPart1__c + $Setup.eBayAPI__c.UserTokenPart2__c + $Setup.eBayAPI__c.UserTokenPart3__c + $Setup.eBayAPI__c.UserTokenPart4__c + &quot;&lt;/eBayAuthToken&gt;&quot;  +
&quot;&lt;/RequesterCredentials&gt;&quot; +
&quot;&lt;/CompleteSaleRequest&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eBay CompletedSale XML Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBayItemNumber__c</fullName>
        <label>eBay Item Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>eBayItemNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>eBayInvoicesPaidAndDispatched</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>eBayItemNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eBayItemNumber__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Dispatched__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>eBay Invoices Paid and Dispatched</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>